# lit-elo

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy_mysql.sh  pyproject.toml  requirements-prod.txt  setup_mysql_db.sql  test_accent_search.py
config/: settings.py  settings_production.py  urls.py
core/: admin.py  business.py  constants.py  elo.py  forms.py  managers.py  models.py  services.py  test_refactored.py  tests.py  tests_import_csv_data.py  tests_run_llm_elo.py  urls.py  urls_cbv.py  views.py  views_cbv.py
core/migrations/: 0001_initial.py  0002_author_wikipedia_url_work_wikipedia_url.py  0003_comparison.py  0004_mysql_optimization.py  0005_remove_wikipedia_urls.py  0006_add_llmmatchup.py  0007_comparison_model_used.py  0008_mlaib_fields.py  0009_remove_comparison_core_compar_content_432d79_idx_and_more.py  (+2 more)
data/: authors.csv  works.csv
docs/: index.html  search-data.json
fixtures/: authors.json  works.json
prompts/: system-prompt.md  works-system-v1.md
scripts/: bootstrap_real_db.py  build_author_work_mapping.py  evaluate_pairings.py  generate_and_evaluate_pairings.py  generate_author_elo.py  generate_pairings.py  generate_test_data.py  lookup_viaf.py  lookup_wikipedia.py  normalize_mlaib.py  parse_mlaib_xml.py  populate_wikipedia_urls.py  update_author_elo.py  validate_works.py
templates/: about.html  author_detail.html  compare.html  home.html  item_comparisons.html  leaderboard.html  recent.html  search.html  search_static.html  top_chart.html  work_detail.html
tests/: test_elo.py  test_import_elo.py
writing/: about.html  about.md
(+29300 files in other folders)
