[project]
name = "lit-elo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.3",
    "django-extensions>=4.1",
    "openai>=1.107.3",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "whitenoise>=6.9.0",
]
